@@ -16,6 +16,7 @@ Jython 2.7.3a1
     - [ GH-160 ] Improve context of "Cannot create PyString with non-byte value"
     - [ GH-158 ] Upgrade Bouncy Castle to 1.71
     - [ GH-157 ] Upgrade ASM to 9.3
+    - [ GH-156 ] Replace custom SHA224 digest with Java's
     - [ GH-151 ] Upgrade Apache Xerces to 2.12.2 (CVE-2022-23437)
     - [ GH-150 ] Upgrade Netty to 4.1.73 (various CVEs)
     - [ GH-138 ] Upgrade Guava to 31.0.1 (CVE-2020-8908)
